fix alignment issues

--- a/_sass/_mailchimp.scss
+++ b/_sass/_mailchimp.scss
@@ -7,9 +7,8 @@
   height: 30px;
   border: none;
   font-family: 'avenir';
-  padding-top: 18px;
-  padding-bottom: 16px;
   max-width: 44vw;
+  height: 40px;
 }
 
 .mc_button {
@@ -18,8 +17,8 @@
   border: none;
   font-family: 'avenir';
   max-width: 42vw;
-  padding-top: 6px;
-  padding-bottom: 5px;
+  height: 40px;
+  padding-top: 4px;
 }
 
 .mc_button_inside {
